# rust-outbox

./: Cargo.toml  docker-compose.yml  main.rs
